# framework.api.sensor

./: CMakeLists.txt  capi-system-sensor.pc.in  project.config
TC/: config
TC/testcase/: Makefile  tslist  utc_system_sensor_accelerometer.c  utc_system_sensor_actions.c  utc_system_sensor_basic.c  utc_system_sensor_bio.c  utc_system_sensor_bio_hrm.c  utc_system_sensor_gyroscope.c  utc_system_sensor_light.c  utc_system_sensor_magnetic.c  utc_system_sensor_motion_doubletap.c  utc_system_sensor_motion_facedown.c  utc_system_sensor_motion_panning.c  utc_system_sensor_motion_shake.c  utc_system_sensor_motion_snap.c  utc_system_sensor_orientation.c  utc_system_sensor_proximity.c
debian/: changelog
doc/: sensor_doc.h
dummy/: CMakeLists.txt
dummy/include/: sensor.h
include/: sensor.h  sensor_private.h  sensors.h
packaging/: capi-system-sensor.spec
src/: sensor.c  sensor.cpp
